// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createBlock tests createBlock calls the correct endpoint 1`] = `
Object {
  "data": Object {
    "blocked": true,
  },
}
`;

exports[`deleteBlock tests deleteBlock calls the correct endpoint 1`] = `
Object {
  "data": Object {
    "blocked": false,
  },
}
`;

exports[`getAccessToken tests getAccessToken calls the correct endpoint and resolves 1`] = `
Object {
  "access_token": "b6fb3801f9caf9968c369532ce26666d868f54fbfake",
  "account_id": 123456,
  "account_username": "testuser",
  "expires_in": 315360000,
  "refresh_token": "183b1z001c5a4be719083e5221d8f2718b184694fake",
  "scope": "",
  "token_type": "bearer",
}
`;

exports[`getBaseInfo tests getBaseInfo calls the correct endpoint and resolves 1`] = `
Object {
  "data": Object {
    "avatar": "https://imgur.com/user/testuser/avatar?maxwidth=290",
    "avatar_name": "default/T",
    "bio": null,
    "cover": "https://imgur.com/user/testuser/cover?maxwidth=2560",
    "cover_name": "default/1-space",
    "created": 1310522831,
    "id": 123456,
    "is_blocked": false,
    "pro_expiration": false,
    "reputation": 0,
    "reputation_name": "Neutral",
    "url": "testuser",
    "user_follow": Object {
      "status": false,
    },
  },
  "status": 200,
  "success": true,
}
`;

exports[`getBaseInfo tests getBaseInfo calls the correct endpoint and resolves when using account_id 1`] = `
Object {
  "data": Object {
    "avatar": "https://imgur.com/user/testuser/avatar?maxwidth=290",
    "avatar_name": "default/T",
    "bio": null,
    "cover": "https://imgur.com/user/testuser/cover?maxwidth=2560",
    "cover_name": "default/1-space",
    "created": 1310522831,
    "id": 123456,
    "is_blocked": false,
    "pro_expiration": false,
    "reputation": 0,
    "reputation_name": "Neutral",
    "url": "testuser",
    "user_follow": Object {
      "status": false,
    },
  },
  "status": 200,
  "success": true,
}
`;

exports[`getBlockStatus tests getBlockStatus calls the correct endpoint and resolves 1`] = `
Object {
  "data": Object {
    "blocked": false,
  },
}
`;

exports[`getBlocks tests getBlocks calls the correct endpoint and resolves 1`] = `
Object {
  "data": Object {
    "items": Array [],
    "next": null,
  },
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests changeSettings calls the correct endpoint 1`] = `
Object {
  "data": true,
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAlbum calls the correct endpoint 1`] = `
Object {
  "data": Object {
    "account_id": 123456,
    "account_url": "testuser",
    "cover": "sJIRJ",
    "cover_height": 50,
    "cover_width": 50,
    "datetime": 1316635797,
    "deletehash": "1d22c21578cb4a3fake",
    "description": null,
    "favorite": false,
    "id": "abc123",
    "images": Array [
      Object {
        "account_id": null,
        "account_url": null,
        "ad_type": 0,
        "ad_url": "",
        "animated": true,
        "bandwidth": 0,
        "datetime": 1316635799,
        "deletehash": "7YHKnoqqihoIXcunfake",
        "description": null,
        "favorite": false,
        "gifv": "https://i.imgur.com/321cba.gifv",
        "has_sound": false,
        "height": 50,
        "hls": "https://i.imgur.com/321cba.m3u8",
        "id": "321cba",
        "in_gallery": false,
        "in_most_viral": false,
        "is_ad": false,
        "link": "https://i.imgur.com/321cba.gif",
        "looping": true,
        "mp4": "https://i.imgur.com/321cba.mp4",
        "mp4_size": 0,
        "name": "happy",
        "nsfw": null,
        "section": null,
        "size": 811,
        "tags": Array [],
        "title": null,
        "type": "image/gif",
        "views": 0,
        "vote": null,
        "width": 50,
      },
    ],
    "images_count": 22,
    "in_gallery": false,
    "include_album_ads": true,
    "is_ad": false,
    "layout": "grid",
    "link": "https://imgur.com/a/abc123",
    "nsfw": true,
    "privacy": "hidden",
    "section": null,
    "title": "My Album",
    "views": 0,
  },
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAlbumCount calls the correct endpoint when authed 1`] = `
Object {
  "data": 5,
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAlbumCount calls the correct endpoint when unauthed 1`] = `
Object {
  "data": 5,
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAlbumIds calls the correct endpoint when authed 1`] = `
Object {
  "data": Array [
    "abc123",
  ],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAlbumIds calls the correct endpoint when unauthed 1`] = `
Object {
  "data": Array [
    "abc123",
  ],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAlbums calls the correct endpoint when authed 1`] = `
Object {
  "data": Array [
    Object {
      "account_id": 123456,
      "account_url": "testuser",
      "cover": "123abc",
      "cover_height": 50,
      "cover_width": 50,
      "datetime": 1316635797,
      "deletehash": "1d22c41821cb4a3fake",
      "description": null,
      "favorite": false,
      "id": "abc123",
      "images_count": 22,
      "in_gallery": false,
      "include_album_ads": false,
      "is_ad": false,
      "layout": "grid",
      "link": "https://imgur.com/a/abc123",
      "nsfw": null,
      "order": 0,
      "privacy": "hidden",
      "section": null,
      "title": "My Album",
      "views": 0,
    },
  ],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAlbums calls the correct endpoint when unauthed 1`] = `
Object {
  "data": Array [
    Object {
      "account_id": 123456,
      "account_url": "testuser",
      "cover": "123abc",
      "cover_height": 50,
      "cover_width": 50,
      "datetime": 1316635797,
      "deletehash": "1d22c41821cb4a3fake",
      "description": null,
      "favorite": false,
      "id": "abc123",
      "images_count": 22,
      "in_gallery": false,
      "include_album_ads": false,
      "is_ad": false,
      "layout": "grid",
      "link": "https://imgur.com/a/abc123",
      "nsfw": null,
      "order": 0,
      "privacy": "hidden",
      "section": null,
      "title": "My Album",
      "views": 0,
    },
  ],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAvailableAvatars calls the correct endpoint when authed 1`] = `
Object {
  "data": Object {
    "available_avatars": Array [
      Object {
        "location": "https://i.imgur.com/QmC4NzH_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/3D",
      },
      Object {
        "location": "https://i.imgur.com/f8wFE2Q_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/avocado",
      },
      Object {
        "location": "https://i.imgur.com/5IB1Gxc_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/bear",
      },
      Object {
        "location": "https://i.imgur.com/qnrO2Ed_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/beer",
      },
      Object {
        "location": "https://i.imgur.com/cscegSd_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/bolt",
      },
      Object {
        "location": "https://i.imgur.com/WM6zUJu_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/burger",
      },
    ],
    "available_avatars_count": 6,
    "avatars_are_default": false,
  },
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAvailableAvatars calls the correct endpoint when unauthed 1`] = `
Object {
  "data": Object {
    "available_avatars": Array [
      Object {
        "location": "https://i.imgur.com/QmC4NzH_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/3D",
      },
      Object {
        "location": "https://i.imgur.com/f8wFE2Q_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/avocado",
      },
      Object {
        "location": "https://i.imgur.com/5IB1Gxc_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/bear",
      },
      Object {
        "location": "https://i.imgur.com/qnrO2Ed_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/beer",
      },
      Object {
        "location": "https://i.imgur.com/cscegSd_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/bolt",
      },
      Object {
        "location": "https://i.imgur.com/WM6zUJu_d.png?maxwidth=290&fidelity=grand",
        "name": "flavor/burger",
      },
    ],
    "available_avatars_count": 6,
    "avatars_are_default": false,
  },
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getAvatar calls the correct endpoint 1`] = `
Object {
  "data": Object {
    "avatar": "https://imgur.com/user/testuser/avatar?maxwidth=290",
    "avatar_name": "default/T",
  },
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getFavorites calls the correct endpoint with defaults 1`] = `
Object {
  "data": Array [],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getFavorites calls the correct endpoint with options 1`] = `
Object {
  "data": Array [],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getGalleryFavorites calls the correct endpoint with defaults 1`] = `
Object {
  "data": Array [],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getGalleryFavorites calls the correct endpoint with options 1`] = `
Object {
  "data": Array [],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getGalleryProfile calls the correct endpoint 1`] = `
Object {
  "data": Object {
    "total_gallery_comments": 0,
    "total_gallery_favorites": 0,
    "total_gallery_submissions": 0,
    "trophies": Array [
      Object {
        "data": null,
        "data_link": null,
        "datetime": 1520782777,
        "description": "Downloaded and used the Imgur app.",
        "id": 123456,
        "image": "https://s.imgur.com/images/trophies/gone_mobile.png",
        "image_height": 512,
        "image_width": 512,
        "name": "Gone Mobile",
        "name_clean": "GoneMobile",
      },
    ],
  },
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getImages calls the correct endpoint using defaults and resolves 1`] = `
Object {
  "data": Array [
    Object {
      "account_id": 123456,
      "account_url": "testuser",
      "ad_type": 0,
      "ad_url": "",
      "animated": true,
      "bandwidth": 0,
      "datetime": 1529788737,
      "deletehash": "abcdefg",
      "description": null,
      "favorite": false,
      "gifv": "https://i.imgur.com/qsRxU1f.gifv",
      "has_sound": false,
      "height": 497,
      "hls": "https://i.imgur.com/qsRxU1f.m3u8",
      "id": "qsRxU1f",
      "in_gallery": false,
      "in_most_viral": false,
      "is_ad": false,
      "link": "https://i.imgur.com/qsRxU1f.gif",
      "looping": true,
      "mp4": "https://i.imgur.com/qsRxU1f.mp4",
      "mp4_size": 0,
      "name": null,
      "nsfw": null,
      "section": null,
      "size": 852367,
      "tags": Array [],
      "title": null,
      "type": "image/gif",
      "views": 0,
      "vote": null,
      "width": 350,
    },
    Object {
      "account_id": 123456,
      "account_url": "testuser",
      "ad_type": 0,
      "ad_url": "",
      "animated": true,
      "bandwidth": 0,
      "datetime": 1529786616,
      "deletehash": "abcdefg",
      "description": null,
      "favorite": false,
      "gifv": "https://i.imgur.com/qEtPGdm.gifv",
      "has_sound": false,
      "height": 497,
      "hls": "https://i.imgur.com/qEtPGdm.m3u8",
      "id": "qEtPGdm",
      "in_gallery": false,
      "in_most_viral": false,
      "is_ad": false,
      "link": "https://i.imgur.com/qEtPGdm.gif",
      "looping": true,
      "mp4": "https://i.imgur.com/qEtPGdm.mp4",
      "mp4_size": 0,
      "name": null,
      "nsfw": null,
      "section": null,
      "size": 852367,
      "tags": Array [],
      "title": null,
      "type": "image/gif",
      "views": 0,
      "vote": null,
      "width": 350,
    },
  ],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getImages calls the correct endpoint with username specified and resolves 1`] = `
Object {
  "data": Array [
    Object {
      "account_id": 123456,
      "account_url": "testuser",
      "ad_type": 0,
      "ad_url": "",
      "animated": true,
      "bandwidth": 0,
      "datetime": 1529788737,
      "deletehash": "abcdefg",
      "description": null,
      "favorite": false,
      "gifv": "https://i.imgur.com/qsRxU1f.gifv",
      "has_sound": false,
      "height": 497,
      "hls": "https://i.imgur.com/qsRxU1f.m3u8",
      "id": "qsRxU1f",
      "in_gallery": false,
      "in_most_viral": false,
      "is_ad": false,
      "link": "https://i.imgur.com/qsRxU1f.gif",
      "looping": true,
      "mp4": "https://i.imgur.com/qsRxU1f.mp4",
      "mp4_size": 0,
      "name": null,
      "nsfw": null,
      "section": null,
      "size": 852367,
      "tags": Array [],
      "title": null,
      "type": "image/gif",
      "views": 0,
      "vote": null,
      "width": 350,
    },
    Object {
      "account_id": 123456,
      "account_url": "testuser",
      "ad_type": 0,
      "ad_url": "",
      "animated": true,
      "bandwidth": 0,
      "datetime": 1529786616,
      "deletehash": "abcdefg",
      "description": null,
      "favorite": false,
      "gifv": "https://i.imgur.com/qEtPGdm.gifv",
      "has_sound": false,
      "height": 497,
      "hls": "https://i.imgur.com/qEtPGdm.m3u8",
      "id": "qEtPGdm",
      "in_gallery": false,
      "in_most_viral": false,
      "is_ad": false,
      "link": "https://i.imgur.com/qEtPGdm.gif",
      "looping": true,
      "mp4": "https://i.imgur.com/qEtPGdm.mp4",
      "mp4_size": 0,
      "name": null,
      "nsfw": null,
      "section": null,
      "size": 852367,
      "tags": Array [],
      "title": null,
      "type": "image/gif",
      "views": 0,
      "vote": null,
      "width": 350,
    },
  ],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getSettings calls the correct endpoint 1`] = `
Object {
  "data": Object {
    "accepted_gallery_terms": false,
    "account_url": "testuser",
    "active_emails": Array [],
    "album_privacy": "hidden",
    "avatar": null,
    "blocked_users": Array [],
    "comment_replies": true,
    "cover": null,
    "email": "testuser@test.com",
    "first_party": false,
    "messaging_enabled": true,
    "newsletter_subscribed": false,
    "pro_expiration": false,
    "public_images": false,
    "show_mature": false,
  },
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getSubmissions calls the correct endpoint with defaults 1`] = `
Object {
  "data": Array [],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests getSubmissions calls the correct endpoint with options 1`] = `
Object {
  "data": Array [],
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests sendVerificationEmail calls the correct endpoint 1`] = `
Object {
  "data": true,
  "status": 200,
  "success": true,
}
`;

exports[`getImages tests verifyEmail calls the correct endpoint 1`] = `
Object {
  "data": true,
  "status": 200,
  "success": true,
}
`;
